--- a/sass project/index.html
+++ b/sass project/index.html
@@ -8,7 +8,7 @@
 <body>
 <!--Header Panel Start-->
 <div class="full-width black ">
-	<div class="wrapper header">	
+	<div class="wrapper header">
 		<div class="grid-pan">
 			<div class="grid-4">
 				<img src="images/logo-19.png" alt="logo">
@@ -19,11 +19,11 @@
 					<li><a href="#">Trademarks</a></li>
 					<li><a href="#">Careers</a></li>
 				</ul>
-			</div>	
+			</div>
 			<div class="grid-2 pull-right">
 			<input id="s" class="ui-autocomplete-input serach" value="" name="s" placeholder="Search here" autocomplete="off" type="text">
-			</div>	
-		</div>	
+			</div>
+		</div>
 	</div>
 </div>
 <!--Header Panel End-->
@@ -31,7 +31,7 @@
 <div class="full-width banner">
 	<div class="wrapper">
 		<div class="grid-pan">
-			<div class="grid-12"><h2>Streamline your operations so you can save time and drive business growth.</h2></div>		
+			<div class="grid-12"><h2>Streamline your operations so you can save time and drive business growth.</h2></div>
 		</div>
 	</div>
 </div>
@@ -39,7 +39,7 @@
 <!--Body Panel start-->
 <div class="wrapper body-pan">
 	<div class="grid-pan">
-		<div class="grid-8">	
+		<div class="grid-8">
 			<h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean accumsan tellus lacus, eget tincidunt nisi aliquam eu. Phasellus ullamcorper imperdiet blandit. Aenean imperdiet interdum sem, mattis sodales turpis auctor ut. Aenean accumsan mi et ipsum eleifend, sit amet mattis nisl hendrerit. Nam aliquet magna leo, non condimentum urna efficitur eget. Aenean id pulvinar orci. Ut pulvinar lectus dapibus tincidunt fringilla. Nulla ultrices mauris nibh. Nunc malesuada luctus dapibus. Vivamus eget diam eget libero mollis suscipit. Donec venenatis enim eget mauris iaculis placerat. Quisque ligula diam, consequat a magna interdum, dictum fermentum libero. Fusce eu porta lacus, at imperdiet ligula. Pellentesque a ex in nunc viverra viverra vel quis felis.</p>
 
@@ -47,19 +47,19 @@
 
 			<p>Donec ut purus eget ante tempor dictum dignissim vitae tellus. Nunc non interdum est. Mauris egestas fringilla maximus. Curabitur vitae diam ut nulla placerat dapibus feugiat nec est. Quisque lectus tellus, sagittis ac mi non, scelerisque pellentesque dolor. Aenean sollicitudin, nisl eget finibus tincidunt, sapien odio tempus odio, pharetra ornare nisi dolor a mauris. Nullam iaculis at tortor et pellentesque. Phasellus efficitur massa eget consectetur euismod. Nam dignissim turpis dapibus sagittis molestie. Curabitur mattis aliquet turpis in lacinia. Etiam lectus urna, aliquam a quam vel, hendrerit ultrices urna.</p>
 
-			<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse sed lectus sit amet lectus sagittis fermentum non ac mauris. Duis ac varius purus, ut tincidunt turpis. Proin iaculis erat pellentesque mauris rutrum mattis. Praesent id risus nec enim semper finibus sit amet vitae urna. Proin aliquam magna eget turpis porta sollicitudin id sed est. Fusce rutrum lectus massa, eu viverra odio tristique ut. Sed ultrices maximus rutrum. Integer placerat tellus non nisl hendrerit commodo. Nam dapibus rhoncus dui vel lobortis. Fusce cursus faucibus porta. Praesent lobortis volutpat sem, a convallis tortor luctus aliquam.</p> 		
+			<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse sed lectus sit amet lectus sagittis fermentum non ac mauris. Duis ac varius purus, ut tincidunt turpis. Proin iaculis erat pellentesque mauris rutrum mattis. Praesent id risus nec enim semper finibus sit amet vitae urna. Proin aliquam magna eget turpis porta sollicitudin id sed est. Fusce rutrum lectus massa, eu viverra odio tristique ut. Sed ultrices maximus rutrum. Integer placerat tellus non nisl hendrerit commodo. Nam dapibus rhoncus dui vel lobortis. Fusce cursus faucibus porta. Praesent lobortis volutpat sem, a convallis tortor luctus aliquam.</p>
 
-		</div>		
+		</div>
 		<div class="grid-4 pull-right">
-			<div class="right-pan">		
-				<h3>Heading 1</h3>	
+			<div class="right-pan">
+				<h3>Heading 1</h3>
 				<img src="images/autolac-2.jpg" alt="">
 				<h3>Heading 2</h3>
 				<img src="images/bodyline.jpg" alt="">
-				<h3>Heading 3</h3>	
+				<h3>Heading 3</h3>
 				<img src="images/autolac-2.jpg" alt="">
 			</div>
-		</div>		
+		</div>
 	</div>
 </div>
 <!--Body Panel End-->
@@ -74,12 +74,12 @@
 				<li><a href="#">Careers</a></li>
 			</ul>
 			</div>
-			<div class="grid-7 pull-right copyright">Copyright © 2006-2016 Absolute Vision Technologies Pty. Ltd. All rights reserved</div>		
+			<div class="grid-7 pull-right copyright">Copyright © 2006-2016 | All rights reserved</div>
 		</div>
 	</div>
 </div>
 <!--Footer Panel End-->
 
-	
+
 </body>
 </html>
